<resources>
    <string name="app_name">CP470 App Toolbox</string>
    <string name="ab_btn_text">Austin Bursey Health App </string>
    <string name="ae_btn_text">Aaron Exley Calendar App</string>
    <string name="bw_btn_text">Brendan Whelan Notepad App</string>
    <string name="jm_btn_text">Joseph Myc Calculator App</string>
    <string name="nc_btn_text">Nathaniel Carr Contacts App</string>
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="title_classes">Classes</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_reminders">Reminders</string>
    <string name="bw_title_activity_notepad_main">NotepadMainActivity</string>
    <string name="bw_notepad_enterText">Enter Text</string>
    <string name="bw_about">About</string>
    <string name="bw_comments">Press the + To add a new note. Press a note to view it, or long press to edit and delete.</string>
    <string name="bw_note_delete">Note Deleted</string>
    <string name="bw_not_empty">Note Can\'t Be Empty</string>
    <string name="bw_title">Title: </string>
    <string name="bw_content">Enter Content:</string>
    <string name="bw_enter_title">Enter title for note</string>
    <string name="bw_enter_content">Enter contents of note</string>
    <string name="ab_Goal">View Goals/Stats</string>
    <string name="ab_Setweight"> Set Weights</string>
    <string name="ab_setCurrentWeight"> Set Current Weight:</string>
    <string name="ab_save">Save</string>
    <string name="ab_setGoalWeight">Set Goal Weight:</string>
    <string name="ab_goBack">Go Back</string>
    <string name="ab_inputFood">Input Food</string>
    <string name="nc_ok">OK</string>
    <string name="nc_yes">Yes</string>
    <string name="nc_no">No</string>
    <string name="nc_cancel">Cancel</string>
    <string name="nc_contact_bar_title">Contacts</string>
    <string name="nc_detail_bar_title">Contact Details</string>
    <string name="nc_edit_bar_title">Contacts</string>
    <string name="nc_bar_new_contact">New Contact</string>
    <string name="nc_bar_edit_contact">Edit Contact</string>
    <string name="nc_bar_delete_contact">Delete Contact</string>
    <string name="nc_bar_new_number">New Number</string>
    <string name="nc_bar_save_contact">Save Contact</string>
    <string name="nc_bar_help">Help</string>
    <string name="nc_edit_icon_from_camera">From Camera</string>
    <string name="nc_edit_icon_from_gallery">From Gallery</string>
    <string name="nc_dialog_empty_name_title">Empty Contact Name</string>
    <string name="nc_dialog_empty_name_message">A Contact\'s name cannot be empty.</string>
    <string name="nc_dialog_empty_numbers_title">Empty Phone Numbers</string>
    <string name="nc_dialog_empty_numbers_message">A Contact must have at least one phone number.</string>
    <string name="nc_dialog_help_title">Help</string>
    <string name="nc_dialog_help_message">This is a Contacts application.\n\nTo start, select any Contact from the main menu. If no Contacts exist, please select the New Contact icon on the Toolbar.\n\nWhen a Contact is selected, their details will be shown either on a new screen or to the right of the existing list (depending on the orientation of the device). Here, you can call or text your Contact.\n\nIf you want to edit or delete this Contact\'s information, select the edit button from the Toolbar.\n\nOn the edit screen, you can change a Contact\'s name, icon, or phone numbers, add or remove phone numbers, or delete the Contact.\n\nNathaniel Carr, version 1.0.</string>
    <string name="nc_dialog_delete_contact_title">Delete Contact?</string>
    <string name="nc_dialog_delete_contact_message">Are you sure you want to delete this Contact?</string>
    <string name="nc_dialog_change_name_title">Edit Name</string>
    <string name="nc_dialog_change_name_message">Please enter a new name.</string>
    <string name="nc_dialog_change_number_title">Edit Phone Number</string>
    <string name="nc_dialog_change_number_message">Please enter a new phone number.</string>
    <string name="nc_toast_save_contact_message">Contact saved.</string>
    <string name="nc_toast_contact_detail_message">You selected: </string>
    <string name="title_activity_ab_nav_main">ab_nav_main</string>
    <string name="title_foods">Foods</string>
    <string name="title_scale">Weights</string>
    <string name="ab_addFood">add food info</string>
    <string name="ab_nameFood">Name of Food: </string>
    <string name="ab_CaloriesFood">Amount of calories: </string>
    <string name="ab_fatFood">Amount of fat in (g): </string>
    <string name="ab_descriptionFood">Description : </string>
    <string name="ab_foodHint">Please use this space to enter any additional information about the food</string>
    <string name="ab_foodEntry">Enter Food </string>
    <string name="ab_about">Description</string>
    <string name="ab_foods">Add/View foods</string>
    <string name="ab_weights">Set/Update Weight</string>
    <string name="ab_delfood">Delete Entry</string>
    <string name="ab_AlertDialog">Caution: You are about to set a weight higher than your current weight </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ab_goToGoals"> Go To Goals</string>
    <string name="ab_CalEdit">Calories Today : </string>
    <string name="ab_FatEdit">Fat Today : </string>
    <string name="ab_comments">To view your goals press the (View Goals/Stats) button. To add food you have recently eaten or view past foods, press the (add food info button).To set your weight and your goal choose the last button.</string>
    <string name="ae_show_more_button">Show More</string>
    <string name="ae_saveButton">Save</string>
    <string name="ae_cancelButton">Cancel</string>
    <string name="ae_deleteButton">Delete</string>
    <string name="ae_are_you_sure_to_delete_event">Are you sure you want to delete this event?</string>
    <string name="ae_ok">Yes</string>
    <string name="ae_no">No</string>
    <string name="ae_close">Close</string>
    <string name="ae_add_sem">Create Semester</string>
    <string name="ae_event_created">Event Created</string>
    <string name="ae_event_updated">Event Updated</string>
    <string name="ae_event_deleted">Event Deleted</string>
    <string name="ae_class_created">Class Created</string>
    <string name="ae_class_updated">Class Updated</string>
    <string name="ae_class_deleted">Class Deleted</string>
    <string name="ae_help_button">Help</string>
    <string name="ae_how_to_navigate">How to Use the UI</string>
    <string name="ae_author_and_Version"><b>Author:</b> Aaron Exley,\n <b>Version:</b> 1.0</string>
    <string name="ae_how_to_use">Along the bottom there are tabs that allow you to switch to different pages.\n
        The first page allows you to see what events you have on that day expanding it to a larger screen if there are a lot.\n
        The second page allows you to add and see what classes and semesters you have saved.\n
        The third page allows you to add and see all the events you have, if you complete that event the progress bar will fill depending on how many steps there are\n
        The fourth page is a settings page.\n\n
        On a lot of the pages the is a plus button in the corner that will bring up a page to create a new event or class.\n
        Also if you click on an element you will be able to modify it or delete it.</string>
    <string name="ae_push_notifications">Allow Push Notifications</string>
    <string name="ae_time_for_notifications">Time for notifications</string>
    <string name="ae_class_name">Class Name</string>
    <string name="ae_location">Location</string>
    <string name="ae_sun">SUN</string>
    <string name="ae_mon">MON</string>
    <string name="ae_tue">TUE</string>
    <string name="ae_wed">WED</string>
    <string name="ae_thu">THU</string>
    <string name="ae_fri">FRI</string>
    <string name="ae_sat">SAT</string>
    <string name="ae_time_start">Start time</string>
    <string name="ae_end_time">End time</string>
    <string name="ae_semester">Semester</string>
    <string name="ae_name">Name</string>
    <string name="ae_Start">Start:</string>
    <string name="ae_date">Date</string>
    <string name="ae_time">Time</string>
    <string name="ae_end">End:</string>
    <string name="ae_repeat">Repeat</string>
    <string name="ae_description">Description</string>
    <string name="ae_steps_event">Steps for Event</string>
    <string name="ae_semester_name">Semester Name</string>
    <string name="ae_start_date">Start Date</string>
    <string name="ae_end_date">End Date</string>
    <string name="ae_save">SAVE</string>
    <string name="ae_error_class_and_semester">Please create a Class and Semester First</string>
    <string name="ae_error_semester">Please Semester First</string>
    <string-array name="ae_timeBefore">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>
    <string name="jm_toolbar_about">Description</string>
    <string name="jm_toolbar_back">Back</string>
    <string name="jm_zeroText">0</string>
    <string name="jm_oneText">1</string>
    <string name="jm_twoText">2</string>
    <string name="jm_threeText">3</string>
    <string name="jm_fourText">4</string>
    <string name="jm_fiveText">5</string>
    <string name="jm_sixText">6</string>
    <string name="jm_sevenText">7</string>
    <string name="jm_eightText">8</string>
    <string name="jm_nineText">9</string>
    <string name="jm_plusText">+</string>
    <string name="jm_minusText">-</string>
    <string name="jm_divideText">/</string>
    <string name="jm_multiplyText">*</string>
    <string name="jm_decimalText">.</string>
    <string name="jm_lbText">(</string>
    <string name="jm_rbText">)</string>
    <string name="jm_expText">^</string>
    <string name="jm_eqText">=</string>
    <string name="jm_deleteText">Delete</string>
    <string name="jm_clearText">Clear</string>
    <string name="jm_saveText">Save</string>
    <string name="jm_varText">Enter Variables</string>
    <string name="jm_equationsText">Saved Equations</string>
    <string name="jm_welcomeText">Welcome</string>
    <string name="jm_savedText">Saved</string>
    <string name="jm_thetaText">\u03B8</string>
    <string name="jm_phiText">\u03D5</string>
    <string name="jm_xText">X</string>
    <string name="jm_yText">Y</string>
    <string name="jm_zText">Z</string>
    <string name="jm_enterEqText">Enter Equations</string>
    <string name="jm_aboutText">Enter equations, using the keypad, press "Enter Variables" to be able to enter variables, save an equation and go to "Saved Equations" to select it when you want ite.</string>
    <string name="jm_okText">OK</string>




</resources>
