<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorKeypadActivity">

    <TableLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"

        android:layout_height="450dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/row789SumSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/num7Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_sevenText" />

            <Button
                android:id="@+id/num8Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_eightText" />

            <Button
                android:id="@+id/num9Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_nineText" />

            <Button
                android:id="@+id/sumButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_plusText" />

            <Button
                android:id="@+id/subButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_minusText" />
        </TableRow>

        <TableRow
            android:id="@+id/row456MulDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/num4Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_fourText" />

            <Button
                android:id="@+id/num5Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_fiveText" />

            <Button
                android:id="@+id/num6Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_sixText" />

            <Button
                android:id="@+id/mulButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_multiplyText" />

            <Button
                android:id="@+id/divButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_divideText" />
        </TableRow>

        <TableRow
            android:id="@+id/row123LBRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/num1Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_oneText" />

            <Button
                android:id="@+id/num2Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_twoText" />

            <Button
                android:id="@+id/num3Button"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_threeText" />

            <Button
                android:id="@+id/LBButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_lbText" />

            <Button
                android:id="@+id/RBButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/jm_rbText" />
        </TableRow>

        <TableRow
            android:id="@+id/row0DecSqrtPwrModDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/num0Button"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:text="@string/jm_zeroText" />

            <Button
                android:id="@+id/decButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:text="@string/jm_decimalText" />

            <Button
                android:id="@+id/pwrButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:text="@string/jm_expText" />

            <Button
                android:id="@+id/delButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:text="@string/jm_deleteText" />

            <Button
                android:id="@+id/clrButton"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:text="@string/jm_clearText" />

        </TableRow>

        <LinearLayout
            android:id="@+id/rowClrDelEqu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/leftButton"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/jm_varText" />

            <Button
                android:id="@+id/rightButton"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/jm_equationsText" />

            <Button
                android:id="@+id/equButton"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/jm_eqText" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:text="@string/jm_saveText"/>




        </LinearLayout>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>