<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calender">

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.group.project.ui.calender.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.group.project.ui.classes.ClassFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="com.group.project.ui.reminders.EventsFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.group.project.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>