<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bar_new_contact"
        android:icon="@drawable/nc_add_contact"
        android:title="@string/nc_bar_new_contact"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        />
    <item
        android:id="@+id/bar_edit_contact"
        android:icon="@drawable/nc_edit"
        android:title="@string/nc_bar_edit_contact"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/bar_help"
        android:title="@string/nc_bar_help"
        app:showAsAction="never"
        android:orderInCategory="2"
        />
</menu>