<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <EditText
            android:id="@+id/EventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ae_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ae_Start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/startDatePicker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ae_date"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/startTimePicker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ae_time"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ae_end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/endDatePicker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ae_date"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/endTimePicker"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ae_time"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>


        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/classSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/semesterSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:id="@+id/repeatCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ae_repeat"/>

        <EditText
            android:id="@+id/stepsForEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ae_steps_event"/>


        <EditText
            android:id="@+id/desc"
            android:hint="@string/ae_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_saveButton" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ae_cancelButton"/>

        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ae_deleteButton"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>